-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: 0.4.2
-
Component/s: Drivers: Other
-
Labels:
-
Environment:
ReactOS 0.4.1
Dell Latitude D430
2gb RAM
Intel Core 2 Duo
Dell Wireless
80gb HD
Broadcom NetXtreme 57XX
-
Module:
Fails to enable with the generic drivers and the Alps drivers.
Device is PS/2 Touchpad and "Pointing Stick" found in ~2007 dell laptops.
- relates to
-
CORE-6901 i8042prt.sys does not work with PS/2 touchpad
-
- Closed
-