[i8042prt]: Yet another initialization hack for the PS/2 touchpad of the Dell Latitude E4300 (which has the same problems). Tested with success by contributor "william341". CORE-11344 CORE-6901

svn path=/trunk/; revision=71496